clusters/home/apps/media/sabnzbd/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sabnzbd
spec:
  selector:
    app: sabnzbd
  ports:
    - name: http
      port: 80
      targetPort: http
  type: ClusterIP
