clusters/home/apps/media/sabnzbd/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sabnzbd
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`sabnzbd.home.arpa`)
      services:
        - name: sabnzbd
          port: 80
